# jul24

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
action/: Play.action
include/dtu_jul24/choreo/: choreograph.hpp
include/dtu_jul24/common/: ActionType.hpp  BaxterJoint.hpp  CustomJoints.hpp  ResourceContainer.hpp  ResourceServer.hpp  ServerStatus.hpp  TopicDuplicate.hpp  constants.hpp  types.hpp  utils.hpp
include/dtu_jul24/pose_manager/: PoseLoader.hpp  pose_manager.hpp
launch/: baxter_jul24.launch  baxter_jul24.xml
scripts/: baxter_init.sh  baxter_stop.sh
src/choreo/: choreograph.cpp  constructor.cpp  main.cpp  node_io.cpp  running.cpp  server_discovery.cpp
src/common/: BaxterJoints.cpp  CustomJoints.cpp  ResourceServer.cpp  utils.cpp
src/pose_manager/: main.cpp  pose_loader.cpp  pose_manager.cpp
src/scripts/: baxter_cmd_dupli.cpp  baxter_head_cmd  setup_baxter.cpp  show_img
srv/: Capture.srv  SaveResource.srv  StackInfo.srv
